cabal-version:      3.0
name:               tagless
version:            0.1.0.0
synopsis:           Tagless Interpreters
-- description:
homepage:           https://github.com/isaac025/tagles
license:            GPL-2.0-only
license-file:       LICENSE
author:             Isaac Hiram Lopez Diaz
maintainer:         isaac.lopez@upr.edu
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Final
        Initial
        Pet
    default-extensions:
        OverloadedStrings
    build-depends:    base ^>=4.17.2.1
                    , parsec
                    , text
                    , mtl
    hs-source-dirs:   src
    default-language: Haskell2010

executable tagless
    import:           warnings
    main-is:          Main.hs
    default-extensions:
        OverloadedStrings
    other-modules:
        Server
        Pages
        InitialPage
        FinalPage
    build-depends:    base ^>=4.17.2.1
                    , tagless
                    , servant
                    , servant-server
                    , servant-lucid
                    , lucid
                    , warp
                    , text
                    , http-api-data
    hs-source-dirs:   app
    default-language: Haskell2010
